--- a/style.css
+++ b/style.css
@@ -3,13 +3,12 @@
     src: url("assets/fonts/HankenGrotesk-VariableFont_wght.ttf");
 }
 .center {
-
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 550px;
-    height: 350px;
+    height: 400px;
     border-radius: 20px;
     box-shadow: 5px 5px 20px lightblue;
 
@@ -25,9 +24,9 @@
 
 }
 .circle{
-    width: 140px;
-    height: 140px;
-    border-radius: 70px;
+    width: 160px;
+    height: 160px;
+    border-radius: 90px;
     margin: auto;
     align-items: center;
     line-height: 2px;
@@ -43,7 +42,7 @@ h1{
     font-size: 60px;
     font-weight: 800;
     position: relative;
-    top: 15px;
+    top: 30px;
 
 }
 h3{
@@ -51,7 +50,7 @@ h3{
     font-weight: 700;
     color:white;
     position: relative;
-    bottom: -10px;
+    bottom: -30px;
 
 }
 .x{
@@ -61,50 +60,114 @@ h3{
 
 }
 #y{
-    font-size: 13px;
+    font-size: 16px;
     position: relative;
-    bottom: -10px;
+    bottom: -40px;
 
 }
 #re{
     font-size: 17px;
 
 }
-#sum{
+.score-con{
+    display: flex;
+}
+
+.score-reaction{
+    display: flex;
+    justify-content: space-between;
+    background-color: hsla(0,100%,67%, 0.2);
+    color: hsl(0,100%,67%);
+    margin-bottom: 15px;
+    padding: 15px;
+    font-family: "Hanken Grotesk";
+    border-radius: 10px;
+    width: 225px;
+    margin: auto;
+}
+.score-memory{
+    display: flex;
+    justify-content: space-between;
+    background-color: hsla(39, 100%, 56%, 0.2);
+    color: hsl(39, 100%, 56%);
+    margin-bottom: 15px;
+    padding: 15px;
+    font-family: "Hanken Grotesk";
+    border-radius: 10px;
+    width: 225px;
+    margin: auto;
+}
+.score-verbal{
+    display: flex;
+    justify-content: space-between;
+    background-color: hsla(166, 100%, 37%, 0.2);
+    color: hsl(166, 100%, 37%);
+    margin-bottom: 15px;
+    padding: 15px;
+    font-family: "Hanken Grotesk";
+    border-radius: 10px;
+    width: 225px;
+    margin: auto;
+}
+.score-visual{
+    display: flex;
+    justify-content: space-between;
+    background-color: hsla(234, 85%, 45%, 0.2);
+    color: hsl(234, 85%, 45%);
+    margin-bottom: 15px;
+    padding: 15px;
+    font-family: "Hanken Grotesk";
+    border-radius: 10px;
+    width: 225px;
+    margin: auto;
+}
+.grey{
+    color: grey;
+    font-family: "Hanken Grotesk";
+}
+.black-text{
+    color: black;
+    font-weight: bold;
+    font-family: "Hanken Grotesk";
+}
+button{
+    margin-top: 30px;
+    padding: 15px 30px;
+    border: none;
+    color: white;
+    outline: none;
+    background-color: hsl(224, 30%, 22%);
+    width: 225px;
+    border-radius: 20px;
     position: relative;
-    left: 35px;
-
-    font-weight: 500;
-
+    top: -30px;
+    left: 25px;
+    
 }
-.renum{
-    padding: 10px;
-    font-family: 'Hanken Grotesk';
-
-}
-.results{
-    border: 2px solid;
-    width: 245px;
-    height: 40px;
+button:hover{
+    margin-top: 30px;
+    padding: 15px 30px;
+    border: none;
+    color: white;
+    outline: none;
+    background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));;
+    width: 225px;
+    border-radius: 20px;
     position: relative;
-    left: 290px;
+    top: -30px;
+    left: 25px;
 
 }
-.testans{
-    display: inline-block;
-    font-family: 'Hanken Grotesk';
-
-}
-#ans{
-    font-weight: 500;
-
-}
-#reaction{
-    color: #fd5555;
-
-}
-#red{
-    background-color: hsl(0, 98%, 66%);
-    opacity: 0.2;
-
+@media (max-width: 550px){
+    #left {
+        width: 100%;
+        border-radius: 0px;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+    .center{
+        flex-direction: column;
+        width: 100%;
+        border-radius: 0px;
+    }
 }
